--- a/tweet_app/templates/tweet_app/profile_page.html
+++ b/tweet_app/templates/tweet_app/profile_page.html
@@ -46,62 +46,148 @@
             <div class="d-flex post-actions">
 
 
-              <form method="post" action="{% url 'buttons_clicked' pk=tweet.tweet_id %}" class="d-flex flex-row">
+              <form action="{% url 'like_post' %}" method="post">
                 {% csrf_token %}
-                <div class="d-flx" id="like-button">
+                <div class="d-flx" id="like-button-div">
                   <button
                     type="submit"
                     class="btn btn-link d-flex align-items-center text-muted mx-4"
-                    name="like_button_{{tweet.tweet_id}}"
+                    name="like-button"
                     value="{{tweet.tweet_id}}"
+                    id="{{ tweet.tweet_id }}"
                   >
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="24"
-                      height="24"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      class="feather feather-heart icon-md mb-0"
-                      id="like-button"
-                    >
+                    <input name="user_id" value="{{request.user.id}}" type="hidden">
+                    <input name="tweet_id" value="{{tweet.tweet_id}}" type="hidden">
+
+                    {% if tweet.tweet_id in liked_tweets %}
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        fill="red"
+                        stroke="currentColor"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        class="feather feather-heart icon-md mb-0"
+                        id="svg"
+                      >
+                      
                       <path
                         d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"
                       ></path>
-                    </svg>
+                      </svg>
+                    {% else %}
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        stroke="currentColor"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        class="feather feather-heart icon-md mb-0"
+                        id="svg"
+                      >
+                      
+                      <path
+                        d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"
+                      ></path>
+                      </svg>
+                    {% endif %}
                     <p class="d-none d-md-block mx-1 my-2">Like</p>
                   </button>
                 </div>
+              </form>
 
-                <div class="d-flx" id="like-button">
-                  <button
-                    type="button"
-                    class="btn btn-link d-flex align-items-center text-muted mx-4"
-                    name="comment_button_{{tweet.tweet_id}}"
-                    data-toggle="modal" 
-                    data-target="#myModal"
+
+
+
+              <div class="d-flx" id="like-button-div">
+                <button
+                  type="button"
+                  class="btn btn-link d-flex align-items-center text-muted mx-4"
+                  name="comment_button_{{tweet.tweet_id}}"
+                  data-target="#CommentModal{{tweet.tweet_id}}" 
+                  data-toggle="modal"
+                  data-whatever="@getbootstrap"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    class="feather feather-message-square icon-md mb-0"
                   >
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="24"
-                      height="24"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      class="feather feather-message-square icon-md mb-0"
-                    >
-                      <path
-                        d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"
-                      ></path>
-                    </svg>
-                    <p class="d-none d-md-block mx-1 my-2">Comment</p>
-                  </button>
+                    <path
+                      d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"
+                    ></path>
+                  </svg>
+                  <p class="d-none d-md-block mx-1 my-2">Comment</p>
+                </button>
+        
+                <div class="modal fade" id="CommentModal{{tweet.tweet_id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+
+
+                      <div class="modal-header">
+                        <!-- <h5 class="modal-title" id="exampleModalLabel">Write your comment</h5> -->
+                        <!-- <button type="button" class="close rounded-circle" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button> -->
+                        <div class="d-flex flex-column overflow-auto" style="height:400px;">
+                          {% for comment in comments%}
+                            {% if comment.tweet_id == tweet.tweet_id %}
+                              <div class="d-flex flex-row my-3" id="comments_{{tweet.tweet_id}}">
+                                <div class="d-flex flex-row align-items-center">
+                                  <img class="rounded-circle" src="{{comment.user.profile_picture_path.url}}" style="width:50px; height:50px;"/>
+                                  <div class="d-flex flex-column">
+                                    <h6 class="mx-2 p-0 my-0">{{comment.user.name}}</h6>
+                                    <p class="text-muted mx-2 p-0 my-0">{{comment.user.username}}</p>
+                                  </div>
+                                </div>
+                                <p>{{comment.content}}</p>
+
+                              </div>
+                              <hr>
+                            {% endif %}
+                          {% endfor %}  
+                        </div>
+                      </div>
+
+
+                      <form method="post" id="comment-form-{{tweet.tweet_id}}" action="{% url 'send_comment' %}">
+                        <div class="modal-body">
+                          <div class="form-group">
+                            <label for="message-text" class="col-form-label">Message:</label>
+                            <textarea class="form-control" id="message-text" name="comment"></textarea>
+                            <input type="hidden" name="tweet_id" value="{{tweet.tweet_id}}">
+                          </div>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                          <form method="post" action="{% url 'send_comment' %}">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-primary">Send Comment </button>
+                          </form>
+                          <input type="hidden" name="user_id" value="{{request.user.id}}">
+                        </div>
+                      </form>
+                    </div>
+                  </div>
+                </div>  
+
+
+
                 </div>
 
                 <div class="d-flx" id="like-button">
@@ -131,7 +217,7 @@
                     <p class="d-none d-md-block mx-1 my-2">Share</p>
                   </button>
                 </div>
-              </form>
+              
 
 
             </div>
